Fix: Hapus kolom/fitur tanggal

--- a/notebooks/02_EDA.ipynb
+++ b/notebooks/02_EDA.ipynb
@@ -1203,6 +1203,18 @@
     "df_date = df.drop(columns=['Periode', 'Bulan'])\n",
     "df_date"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5604075c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# hapus kolom tanggal\n",
+    "df_date = df_date.drop(columns=['Tanggal'])\n",
+    "df_date.head(5)"
+   ]
   }
  ],
  "metadata": {
