Feat: Standarisasi dan split data 80:20

--- a/notebooks/02_EDA.ipynb
+++ b/notebooks/02_EDA.ipynb
@@ -1592,6 +1592,18 @@
     "ax.legend()\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "8d6460ec",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Simpan hasil EDA ke file CSV baru di folder data/processed\n",
+    "processed_data_path = os.path.join('..', 'data', 'processed', 'data_eda.csv')\n",
+    "df_date.to_csv(processed_data_path, index=False)"
+   ]
   }
  ],
  "metadata": {
