Fix: hapus dan buat ulang proses standarisasi data menggunakan data hasil EDA yang sudah diseleksi fitur/kolom berkorelasi tinggi dengan total pengangguran

--- a/notebooks/01_collect_data.ipynb
+++ b/notebooks/01_collect_data.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "370fd65b",
    "metadata": {},
    "outputs": [
@@ -132,6 +132,76 @@
        "      <td>626202</td>\n",
        "      <td>9427590</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>2008</td>\n",
+       "      <td>Agustus</td>\n",
+       "      <td>103206</td>\n",
+       "      <td>443832</td>\n",
+       "      <td>2099968</td>\n",
+       "      <td>1973986</td>\n",
+       "      <td>2403394</td>\n",
+       "      <td>1409128</td>\n",
+       "      <td>362683</td>\n",
+       "      <td>598318</td>\n",
+       "      <td>9394515</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>2009</td>\n",
+       "      <td>Februari</td>\n",
+       "      <td>60347</td>\n",
+       "      <td>415955</td>\n",
+       "      <td>2143747</td>\n",
+       "      <td>2054682</td>\n",
+       "      <td>2133627</td>\n",
+       "      <td>1337586</td>\n",
+       "      <td>486399</td>\n",
+       "      <td>626621</td>\n",
+       "      <td>9258964</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>2009</td>\n",
+       "      <td>Agustus</td>\n",
+       "      <td>90471</td>\n",
+       "      <td>547430</td>\n",
+       "      <td>1531671</td>\n",
+       "      <td>1770823</td>\n",
+       "      <td>2472245</td>\n",
+       "      <td>1407226</td>\n",
+       "      <td>441100</td>\n",
+       "      <td>701651</td>\n",
+       "      <td>8962617</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>2010</td>\n",
+       "      <td>Februari</td>\n",
+       "      <td>59066</td>\n",
+       "      <td>547164</td>\n",
+       "      <td>1522465</td>\n",
+       "      <td>1657452</td>\n",
+       "      <td>2111256</td>\n",
+       "      <td>1336881</td>\n",
+       "      <td>538186</td>\n",
+       "      <td>820020</td>\n",
+       "      <td>8592490</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>2010</td>\n",
+       "      <td>Agustus</td>\n",
+       "      <td>157586</td>\n",
+       "      <td>600221</td>\n",
+       "      <td>1402858</td>\n",
+       "      <td>1661449</td>\n",
+       "      <td>2149123</td>\n",
+       "      <td>1195192</td>\n",
+       "      <td>443222</td>\n",
+       "      <td>710128</td>\n",
+       "      <td>8319779</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
@@ -143,6 +213,11 @@
        "2     2007  Februari                      145750                520316   \n",
        "3     2007   Agustus                       94301                438519   \n",
        "4     2008  Februari                       79764                448431   \n",
+       "5     2008   Agustus                      103206                443832   \n",
+       "6     2009  Februari                       60347                415955   \n",
+       "7     2009   Agustus                       90471                547430   \n",
+       "8     2010  Februari                       59066                547164   \n",
+       "9     2010   Agustus                      157586                600221   \n",
        "\n",
        "        SD     SLTP  SLTA Umum/SMU  SLTA Kejuruan/SMK  Akademi/Diploma  \\\n",
        "0  2675459  2860007        2842876            1204140           297185   \n",
@@ -150,24 +225,33 @@
        "2  2753548  2643062        2630360            1114675           330316   \n",
        "3  2179792  2264198        2532204            1538349           397191   \n",
        "4  2216748  2166619        2204377            1165582           519867   \n",
+       "5  2099968  1973986        2403394            1409128           362683   \n",
+       "6  2143747  2054682        2133627            1337586           486399   \n",
+       "7  1531671  1770823        2472245            1407226           441100   \n",
+       "8  1522465  1657452        2111256            1336881           538186   \n",
+       "9  1402858  1661449        2149123            1195192           443222   \n",
        "\n",
        "   Universitas     Total  \n",
        "0       375601  11104693  \n",
        "1       395554  10932000  \n",
        "2       409890  10547917  \n",
        "3       566588  10011142  \n",
-       "4       626202   9427590  "
+       "4       626202   9427590  \n",
+       "5       598318   9394515  \n",
+       "6       626621   9258964  \n",
+       "7       701651   8962617  \n",
+       "8       820020   8592490  \n",
+       "9       710128   8319779  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "print('5 baris awal dan ankhir dataset')\n",
-    "print(df.head(5))\n",
-    "print(df.tail(5))\n"
+    "df.head(10)"
    ]
   }
  ],
