--- a/notebooks/02_EDA.ipynb
+++ b/notebooks/02_EDA.ipynb
@@ -1534,6 +1534,34 @@
     "selected_features = df_date[['Tanggal_Gabungan', 'Tidak/belum tamat SD', 'SLTP', 'SLTA Kejuruan/SMK', 'Total_Pengangguran'  ]]\n",
     "selected_features.head(5)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "8513714e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hasil EDA dan feature selection disimpan di: C:\\Users\\ASUS\\OneDrive\\Documents\\RegresiProject\\data\\processed\\selected_features.csv\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Simpan hasil EDA dan feature selection ke file CSV di folder processed\n",
+    "processed_data_path = r\"C:\\Users\\ASUS\\OneDrive\\Documents\\RegresiProject\\data\\processed\\selected_features.csv\"\n",
+    "os.makedirs(os.path.dirname(processed_data_path), exist_ok=True)\n",
+    "selected_features.to_csv(processed_data_path, index=False)\n",
+    "print(f'Hasil EDA dan feature selection disimpan di: {processed_data_path}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2187beeb",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
