Feat: Import library/Pustaka untuk mendukung proses modeling

--- a/notebooks/04_modeling.ipynb
+++ b/notebooks/04_modeling.ipynb
@@ -2,166 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "d4dc2d33",
+   "execution_count": null,
+   "id": "b8f45c7d",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Tidak/belum pernah sekolah</th>\n",
-       "      <th>Tidak/belum tamat SD</th>\n",
-       "      <th>SD</th>\n",
-       "      <th>SLTP</th>\n",
-       "      <th>SLTA Umum/SMU</th>\n",
-       "      <th>SLTA Kejuruan/SMK</th>\n",
-       "      <th>Akademi/Diploma</th>\n",
-       "      <th>Universitas</th>\n",
-       "      <th>Total</th>\n",
-       "      <th>Total_Pengangguran</th>\n",
-       "      <th>year</th>\n",
-       "      <th>month</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>2.841038</td>\n",
-       "      <td>1.139378</td>\n",
-       "      <td>2.406494</td>\n",
-       "      <td>2.701432</td>\n",
-       "      <td>1.987383</td>\n",
-       "      <td>-0.659700</td>\n",
-       "      <td>0.068592</td>\n",
-       "      <td>-1.622675</td>\n",
-       "      <td>11104693</td>\n",
-       "      <td>2.434788</td>\n",
-       "      <td>-1.642740</td>\n",
-       "      <td>-1.028992</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>1.641200</td>\n",
-       "      <td>1.103836</td>\n",
-       "      <td>2.236314</td>\n",
-       "      <td>2.399513</td>\n",
-       "      <td>2.012303</td>\n",
-       "      <td>-0.354716</td>\n",
-       "      <td>-0.118615</td>\n",
-       "      <td>-1.501534</td>\n",
-       "      <td>10932000</td>\n",
-       "      <td>2.204440</td>\n",
-       "      <td>-1.642740</td>\n",
-       "      <td>0.971825</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>1.172617</td>\n",
-       "      <td>0.231714</td>\n",
-       "      <td>2.561452</td>\n",
-       "      <td>2.197439</td>\n",
-       "      <td>1.374562</td>\n",
-       "      <td>-0.929719</td>\n",
-       "      <td>0.393136</td>\n",
-       "      <td>-1.414495</td>\n",
-       "      <td>10547917</td>\n",
-       "      <td>1.524311</td>\n",
-       "      <td>-1.443101</td>\n",
-       "      <td>-1.028992</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>0.205039</td>\n",
-       "      <td>-0.552743</td>\n",
-       "      <td>1.422904</td>\n",
-       "      <td>1.317288</td>\n",
-       "      <td>1.091514</td>\n",
-       "      <td>0.348993</td>\n",
-       "      <td>1.048229</td>\n",
-       "      <td>-0.463129</td>\n",
-       "      <td>10011142</td>\n",
-       "      <td>1.481321</td>\n",
-       "      <td>-1.443101</td>\n",
-       "      <td>0.971825</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>-0.068352</td>\n",
-       "      <td>-0.457684</td>\n",
-       "      <td>1.496239</td>\n",
-       "      <td>1.090599</td>\n",
-       "      <td>0.146177</td>\n",
-       "      <td>-0.776074</td>\n",
-       "      <td>2.249935</td>\n",
-       "      <td>-0.101192</td>\n",
-       "      <td>9427590</td>\n",
-       "      <td>0.778890</td>\n",
-       "      <td>-1.243463</td>\n",
-       "      <td>-1.028992</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   Tidak/belum pernah sekolah  Tidak/belum tamat SD        SD      SLTP  \\\n",
-       "0                    2.841038              1.139378  2.406494  2.701432   \n",
-       "1                    1.641200              1.103836  2.236314  2.399513   \n",
-       "2                    1.172617              0.231714  2.561452  2.197439   \n",
-       "3                    0.205039             -0.552743  1.422904  1.317288   \n",
-       "4                   -0.068352             -0.457684  1.496239  1.090599   \n",
-       "\n",
-       "   SLTA Umum/SMU  SLTA Kejuruan/SMK  Akademi/Diploma  Universitas     Total  \\\n",
-       "0       1.987383          -0.659700         0.068592    -1.622675  11104693   \n",
-       "1       2.012303          -0.354716        -0.118615    -1.501534  10932000   \n",
-       "2       1.374562          -0.929719         0.393136    -1.414495  10547917   \n",
-       "3       1.091514           0.348993         1.048229    -0.463129  10011142   \n",
-       "4       0.146177          -0.776074         2.249935    -0.101192   9427590   \n",
-       "\n",
-       "   Total_Pengangguran      year     month  \n",
-       "0            2.434788 -1.642740 -1.028992  \n",
-       "1            2.204440 -1.642740  0.971825  \n",
-       "2            1.524311 -1.443101 -1.028992  \n",
-       "3            1.481321 -1.443101  0.971825  \n",
-       "4            0.778890 -1.243463 -1.028992  "
-      ]
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# buat model logistic regresi sederhana\n",
-    "# pakai data hasil preprocessing \n",
-    "\n",
-    "import os\n",
-    "import pandas as pd\n",
-    "from sklearn.linear_model import LogisticRegression\n",
-    "from sklearn.metrics import classification_report, confusion_matrix\n",
-    "\n",
-    "# load data hasil preprocessing\n",
-    "data_path = os.path.join('..', 'data', 'processed', 'data_preprocessed.csv')\n",
-    "df = pd.read_csv(data_path)\n",
-    "df.head(5)"
+    "from sklearn. linear_model import LinearRegression\n",
+    "from sklearn.metrics import mean_squeared_error, r2_score\n",
+    "import numpy as np\n",
+    "import pandas as pd"
    ]
   }
  ],
