Feat: Simpan Hasil processing data yang sudah dibagin menjadi latih dan uji

--- a/notebooks/03_preprocessing.ipynb
+++ b/notebooks/03_preprocessing.ipynb
@@ -332,6 +332,29 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 28,
+   "id": "1418b80b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Data latih dan data uji berhasil disimpan.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Simpan data latih dan data uji ke file CSV di folder data/processed\n",
+    "X_train.to_csv(r\"C:\\Users\\ASUS\\OneDrive\\Documents\\RegresiProject\\data\\processed\\X_train.csv\", index=False)\n",
+    "X_test.to_csv(r\"C:\\Users\\ASUS\\OneDrive\\Documents\\RegresiProject\\data\\processed\\X_test.csv\", index=False)\n",
+    "y_train.to_csv(r\"C:\\Users\\ASUS\\OneDrive\\Documents\\RegresiProject\\data\\processed\\y_train.csv\", index=False)\n",
+    "y_test.to_csv(r\"C:\\Users\\ASUS\\OneDrive\\Documents\\RegresiProject\\data\\processed\\y_test.csv\", index=False)\n",
+    "print(\"Data latih dan data uji berhasil disimpan.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "id": "16208bcf",
    "metadata": {},
